@startuml

package org.itver.evalpro.bo{

    abstract class Entidad<T>{
        #id : T
        +getId() : T
        +setId() : void
    }
    class Carrera{
        -nombre : String
        +getNombre() : String
        +setNombre(nombre : String) : void
    }
    class Maestro{
        -apellidoPaterno : String
        -apellidoMaterno : String
        -email : String
        -comentarios : List<Comentarios>
        -fechaRegistro : java.util.Date
        -genero : String
        -nombre : String
        +getApellidoMaterno() : String
        +getApellidoPaterno() : String
        +getEmail() : String
        +getComentarios() : List<Comentario>
        +getFechaRegistro() : java.util.Date
        +getGenero() : String
        +getNombre() : String
        +getPromedioCalificaciones() : double
        +setApellidoMaterno(apellidoMaterno : String) : void
        +setApellidoPaterno(apellidoPaterno : String) : void
        +setEmail(email : String) : void
        +setFechaRegistro(fecha : java.util.Date) : void
        +setGenero(genero : String) : void        
        +setNombre(nombre : String) : void
    }

    class Materia{
        -creditos : char
        -fechaRegistro : java.util.Date
        -nombre : String        
        +getCreditos() : char
        +getFechaRegistro() : java.util.Date
        +getNombre() : String
        +setCreditos(creditos : char) : void
        +setFechaRegistro(fechaRegistro : java.util.Date) : void
        +setNombre(nombre : String) : void
    }
    class Comentario{
        -calificaciones : int[]
        -contenido : String
        -fechaRegistro : java.util.Date
        -usuario : String
        +getCalifAsist() : int
        +getCalifDomi() : int
        +getCalifCalid() : int
        +getContenido() : String
        +getFechaRegistro() : java.util.Date
        +getPromedioCalificaciones() : double
        +getUsuario() : String
        +setCalifAsist(calificacion : int) : void
        +setCalifDomi(calificacion : int) : void
        +setCalifCalid(calificacion : int) : void
        +setContenido(comentario : String) : void
        +setFechaRegistro(fecha : java.util.Date) : void        
        +setUsuario(usuario : String) : void
    }

    class CarreraMateria{
        -idCarrera : Integer
        -idMateria : Integer
        + getIdCarrera() : Integer
        + getIdMateria() : Integer}
        + setIdCarrera(idCarrera : Integer) : void
        + setIdMateria(idMateria : Integer) : void
    }

    class Resena{
        -idMaestro : Integer
        -idCarreraMateria : Integer
        + getIdMaestro() : Integer
        + getIdCarreraMateria() : Integer}
        + setIdMaestro(idMaestro : Integer) : void
        + setIdCarreraMateria(idCarreraMateria : Integer) : void
    }

    /'
    'Ocultar métodos o atributos
    hide methods
    hide attributes
    '/
    'Relaciones
    'Carrera o--o Materia
    'Maestro o--o Materia
    
    'Maestro o--o Comentario
    Carrera -left-|> Entidad
    Comentario -up-|> Entidad
    Maestro -up-|> Entidad
    Materia -up-|> Entidad
    CarreraMateria -right-|> Entidad
    Resena -up-|> Entidad
    
}

@enduml